# neural_dfa

./: README.md  demo.py  demo.py.cfg  integer_states.py  main.py  neural_dfa.py  pyproject.toml
